--- a/h5s/video/videofullscreen/index.html
+++ b/h5s/video/videofullscreen/index.html
@@ -12,12 +12,12 @@
             padding: 0;
         }
         video {
-            width: 300px;
-            height: 500px;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
 <body>
-    <video src="../video/video.mp4" controls playsinline x5-playsinline></video>
+    <video src="../video/video.mp4" controls style="object-fit:fill" x5-video-player-fullscreen="true" x5-video-player-type="h5"></video>
 </body>
 </html>
