--- a/h5s/video/videoinline/index.html
+++ b/h5s/video/videoinline/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta charset="UTF-8" name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>videotfullscreen</title>
+    <title>videoinline</title>
     <style>
         * {
             margin: 0;
