--- a/h5s/video/videoinline/demo1.html
+++ b/h5s/video/videoinline/demo1.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta charset="UTF-8" name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>videotfullscreen</title>
-    <script src="../libs/jquery-2.1.0.js"></script>
+    <title>videoinline</title>
     <style>
         * {
             margin: 0;
@@ -15,17 +14,15 @@
             position: absolute;
             left: 0;
             top: 0;
-            width: 100%;
-            height: 100%;
+            right: 0;
+            bottom: 0;
+            width: 200px;
+            height: 400px;
+            margin: auto;
         }
     </style>
 </head>
 <body>
-    <video id="video" src="../video/video.mp4" style="object-fit:fill" x5-video-player-fullscreen="true" x5-video-player-type="h5" poster="poster.JPG"></video>
-    <script>
-        document.getElementById('video').onclick = function() {
-            this.play();
-        }
-    </script>
+    <video src="../video/video.mp4" autoplay controls playsinline webkit-playsinline x5-playsinline x5-video-player-type="h5" poster="poster.JPG"></video>
 </body>
 </html>
