--- a/h5s/video/videoinline/index.html
+++ b/h5s/video/videoinline/index.html
@@ -23,6 +23,6 @@
     </style>
 </head>
 <body>
-    <video src="../video/video.mp4" autoplay playsinline webkit-playsinline x5-playsinline poster="poster.JPG"></video>
+    <video src="../video/video.mp4" autoplay controls playsinline webkit-playsinline x5-playsinline poster="poster.JPG"></video>
 </body>
 </html>
