--- a/h5s/video/videots/index.html
+++ b/h5s/video/videots/index.html
@@ -82,7 +82,7 @@
             // 安卓通过另一种方案达到同IOS一样的表现形式
             var canvas, player;
             canvas = document.querySelector('#canvas');
-            player = new JSMpeg.Player('https://gerinn.h5ome.com/out108.ts', {
+            player = new JSMpeg.Player('out108.ts', {
                 canvas: canvas,
                 loop: false,
                 autoplay: false,
